# otus_cpp

./: README.md
homework_1/: CMakeLists.txt  main.cpp
homework_1/.github/workflows/: main.yml
